done quizzes category

--- a/quizzes/quizzes.css
+++ b/quizzes/quizzes.css
@@ -1,24 +1,45 @@
-:root{
+:root {
     --quiz-color: crimson;
+    --shadow: #cbd5e1;
 }
 
-.quiz-color{
+.quiz-color {
     color: var(--quiz-color);
 }
 
-.quiz-bg-color{
+.quiz-bg-color {
     background-color: var(--quiz-color);
 }
 
-.quiz-home-main{
+.quiz-home-main {
     height: 50vh;
 }
 
-.quiz-text{
+.quiz-text {
     text-align: center;
     line-height: 4;
 }
-.quiz-btn{
-    padding: 0.8rem 6rem;
+
+.start-quiz-btn {
+    padding: 0.5rem 3rem;
     font-size: 1.5rem;
+}
+
+.quiz-card-main {
+    padding: 0;
+}
+
+.quizzes-main {
+    gap: 3rem;
+    flex-wrap: wrap;
+}
+
+.quiz-card {
+    width: 28rem;
+    margin: 0;
+    box-shadow: 0 0 8px var(--shadow);
+}
+
+.quiz-img {
+    height: 20rem;
 }
