--- a/mcq/hera-pheri/hera-pheri.css
+++ b/mcq/hera-pheri/hera-pheri.css
@@ -12,7 +12,7 @@
 }
 
 .question-wrapper{
-    border: 2px solid black;
+    box-shadow: 0 0 10px #cbd5e1;
     width: 60rem;
     margin: auto;
 }
@@ -23,5 +23,9 @@
 }
 
 .next-btn{
-    background-color:tomato;
+    background-color:#f97316;
+}
+
+.mcq{
+    text-align: center;
 }
