--- a/mcq/hera-pheri/hera-pheri.css
+++ b/mcq/hera-pheri/hera-pheri.css
@@ -1,18 +1,22 @@
+:root{
+    --shadow-color:#cbd5e1;
+    --btn-hover:#94a3b8;
+}
 
 
 .option-btn{
     width: 25rem;
     padding: 1.5rem 8rem;
-    background-color: #cbd5e1;
+    background-color: var(--shadow-color);
     color: black;
 }
 
 .option-btn:hover{
-    background-color: #94a3b8;
+    background-color: var(--btn-hover);
 }
 
 .question-wrapper{
-    box-shadow: 0 0 10px #cbd5e1;
+    box-shadow: 0 0 10px var(--shadow-color);
     width: 60rem;
     margin: auto;
 }
